--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   font-family: "Lexend Tera", sans-serif;
 }
 
-div {
+.home {
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -30,6 +30,17 @@ div {
   text-decoration: none;
 }
 
+/* Application page start */
+.application {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  font-size: 100px;
+  color: white;
+}
 .tito-application {
   background: linear-gradient(
       rgba(255, 255, 255, 0.5),
@@ -39,8 +50,6 @@ div {
 }
 
 .app-heading {
-  position: absolute;
-  top: 0;
   color: rgb(0, 0, 0);
   font-size: 100px;
 }
@@ -50,8 +59,7 @@ div {
   font-size: 50px;
   color: black;
   text-decoration: none;
-  position: absolute;
-  top: 100px;
+  position: relative;
 }
 
 .home-link:hover {
@@ -78,7 +86,6 @@ div {
 #submit-button {
   letter-spacing: 5px;
   clear: both;
-  /* border-radius: 20px; */
   width: 500px;
 }
 #submit-button:hover {
