--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-size: 100px;
+  font-size: 5vw;
   color: white;
 }
 
