--- a/style.css
+++ b/style.css
@@ -40,75 +40,17 @@
   text-decoration: none;
 }
 
-/* Application page start */
-/*
-.application {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  text-align: center;
-  font-size: 100px;
-  color: white;
-}
-.tito-application {
-  background: linear-gradient(
-      rgba(255, 255, 255, 0.5),
-      rgba(255, 255, 255, 0.5)
-    ),
-    url("./pics/tito_apply.png") center/cover no-repeat fixed;
+@media (max-width: 500px){
+  .banner {
+  /* background: url("./pics/tito_banner_small.png") center/cover no-repeat fixed; */
+  background: black;
 }
 
-.app-heading {
-  color: rgb(0, 0, 0);
-  font-size: 100px;
+  .apply-link {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgb(0, 0, 0, 0.5));
 }
 
-.home-link {
-  text-transform: uppercase;
-  font-size: 50px;
-  color: black;
-  text-decoration: none;
-  position: relative;
-}
+.gallery-page {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgb(0, 0, 0, 0.3));
 
-.home-link:hover {
-  color: rgba(0, 0, 0, 0.5);
 }
-
-.form-info-input {
-  width: 600px;
-  background: transparent;
-  border: none;
-  outline: none;
-  border-bottom: 1px solid grey;
-  color: rgb(0, 0, 0);
-  font-size: 50px;
-  margin-bottom: 16px;
-}
-
-.form-info-label {
-  color: black;
-  font-weight: bolder;
-  font-size: 50px;
-}
-
-#submit-button {
-  letter-spacing: 5px;
-  clear: both;
-  width: 500px;
-}
-#submit-button:hover {
-  background: rgba(255, 255, 255, 0.5);
-  cursor: pointer;
-}
-textarea {
-  font-family: inherit;
-  font-size: 20px;
-}
-#intent-input {
-  font-size: 20px;
-  width: 50vw;
-}
-*/
